--- a/app/src/main/res/layout/activity_bluetooth_connect.xml
+++ b/app/src/main/res/layout/activity_bluetooth_connect.xml
@@ -16,16 +16,16 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tvNama"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:text="Pilih Bluetooth"
                 android:textSize="20dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +37,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:paddingBottom="30dp"
         android:clipToPadding="false"
-        android:id="@+id/rvSchedule"
+        android:id="@+id/rvDevice"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
