--- a/app/src/main/res/layout/acitivity_home.xml
+++ b/app/src/main/res/layout/acitivity_home.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/civProfile"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/profil"
+                android:src="@drawable/ic_baseline_account_circle_24"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
