--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/logo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_baseline_account_circle_24"
+        android:src="@drawable/logo_ubhara"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:scaleType="fitCenter"
